# BobV2

./: .gitignore  BOB_PLAN.md  BOB_V2_EXPLAINED.md  BOB_V2_PITCH.md  README.md  api_bridge.py  bob_finished_state_production_comparison.md  bob_vs_claude_vs_codex_comparison.md  bobart2.md  implementation_plan.md  update_bob.md
bobV2/: .env.example  BOB_CLI_TECHNICAL_DOCUMENTATION.md  MACBOOK_SETUP.md  README.md  prompts.md  pyproject.toml
bobV2/.github/workflows/: ci.yml
bobV2/bob/: __main__.py  paths.py
bobV2/bob.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
bobV2/bob/analytics/: __init__.py  db.py  report.py  tracker.py
bobV2/bob/app_server/: __init__.py  context.py  errors.py  event_bus.py  registry.py  router.py  schemas.py  server.py
bobV2/bob/bridge/: __init__.py  chrome_bridge.py
bobV2/bob/cli/: exec_cmd.py  main.py
bobV2/bob/client/: openai_client.py
bobV2/bob/config/: dotenv.py  editor.py  loader.py  schema.py  theme.py
bobV2/bob/core/: agent_memory.py  agent_templates.py  compact.py  context_budget.py  context_errors.py  context_manager.py  environment_context.py  exec.py  exec_policy.py  image_payloads.py  network_policy.py  rollout_reconstruction.py  session.py  task_db.py  team.py  thread_manager.py  tool_orchestrator.py  turn.py
bobV2/bob/hooks/: runner.py
bobV2/bob/instructions/: loader.py
bobV2/bob/llm/: __init__.py  catalog.py  client.py  compatibility.py
bobV2/bob/mcp/: client.py  demo.py  manager.py  oauth.py  server.py
bobV2/bob/memories/: phase1.py  phase2.py  storage.py
bobV2/bob/migrations/: 0001_app_server_v1.sql  0002_tasks_runtime.sql
bobV2/bob/plugins/: demo.py  manager.py
bobV2/bob/prompts/: __init__.py  system.md
bobV2/bob/protocol/: config_types.py  events.py  items.py  ops.py  plan_types.py  review_types.py
bobV2/bob/rollout/: recorder.py  session_index.py  state_db.py
bobV2/bob/sandbox/: __init__.py  base.py  linux.py  macos.py  windows.py
bobV2/bob/skills/: demo.py  (+2 more)
bobV2/graybench_audit/: .gitignore  LICENSE  README.md  pyproject.toml
bobV2/scripts/: build_model_catalog.py  setup_demo_integrations.ps1
(+264 files in other folders)
