[project]
name = "bob"
version = "0.1.0"
description = "bob — Your AI-Powered Development Partner"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "litellm>=1.83.3",
    "markdown-it-py>=3.0.0",
    "textual>=0.80.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "aiosqlite>=0.20.0",
    "aiofiles>=23.0.0",
    "mcp>=1.0.0",
    "prompt_toolkit>=3.0.0",
    "rapidfuzz>=3.0.0",
    "pyperclip>=1.8.0",
    "watchfiles>=0.21.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.2",
    "pypdf>=4.0.0",
    "ddgs>=8.1.0",
    "tomli_w>=1.0.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov",
    "textual-dev>=0.80.0",
]
windows = ["pywin32>=306"]

[project.scripts]
bob = "bob.cli.main:cli_main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["bob*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
