[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graybench"
version = "1.0.0"
description = "Open-source LLM benchmarking suite by GrayArea Labs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "GrayArea Labs"}]

dependencies = [
    # Core
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.0",
    "cryptography>=42.0",

    # Web
    "flask>=3.0",

    # LLM Providers
    "google-genai>=1.0.0",
    "openai>=1.30",
    "anthropic>=0.30",
    "httpx>=0.25",

    # Datasets
    "datasets>=2.14",
    "huggingface-hub>=0.20",

    # Science (for CritPt)
    "sympy>=1.12",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
graybench = "graybench.cli:main"

[tool.setuptools.packages.find]
include = ["graybench*"]
